# dbx-mcp-patches

./: .dockerignore  .gitignore  LEGACY.md  PATCHES.md  README.md  UPSTREAM_BASELINE.txt  update_log.md
.github/workflows/: mcp-release.yml
apps/desktop/src/composables/: useDataGridEditor.ts
apps/desktop/src/lib/: http.ts
apps/desktop/src/stores/: queryStore.ts  settingsStore.ts
crates/: README.md
crates/dbx-cli/: Cargo.toml
crates/dbx-cli/src/: main.rs
crates/dbx-core/: APPLY.md  Cargo.toml
crates/dbx-core/src/: agent_connection.rs  connect_progress.rs  connection.rs  connection_url.rs  database_report.rs  database_stats.rs  lib.rs  list_index.rs  proxy_profiles.rs  schema.rs  storage.rs
crates/dbx-core/src/db/: mysql.rs  proxy_tunnel.rs
crates/dbx-mcp/: Cargo.toml
crates/dbx-mcp/src/: backend.rs  batch.rs  database_report.rs  database_stats.rs  lib.rs  main.rs  progress.rs  resolve.rs  server.rs  tunnel_profiles.rs
crates/dbx-mcp/tests/: protocol.rs
crates/dbx-web/src/: auth.rs  main.rs
deploy/: Dockerfile.self  Dockerfile.self.dockerignore  docker-compose.self.yml
legacy-node-packages/cli/src/: cli.ts
legacy-node-packages/mcp-server/: package.json  update_log.md
legacy-node-packages/mcp-server/src/: index.ts
legacy-node-packages/node-core/src/: connections.ts  database-stats.ts  database.ts  list-index.ts  tunnel-profiles.ts  web-backend.ts
patches/: dbx-core-failover.patch
scripts/: schema-clone-sample.ps1
skills/connection-url/: SKILL.md
skills/dbx/: SKILL.md
src-tauri/: Cargo.toml
src-tauri/src/commands/: connection.rs
(+25 files in other folders)
