[package]
name = "dbx-cli"
version = "0.4.42"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "dbx-cli"
path = "src/main.rs"

[dependencies]
dbx-core = { path = "../dbx-core", default-features = false }
dbx-mcp = { path = "../dbx-mcp" }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
async-trait = "0.1"
tempfile = "3"
